--- a/assets/www/fragment1.html
+++ b/assets/www/fragment1.html
@@ -8,12 +8,11 @@
     <title>Hello World</title>
 </head>
 <body>
-<div class="app">
-    <h1>Apache Cordova</h1>
-    <div id="deviceready" class="blink">
-        <p>Connecting to Device</p>
-        <p>Device is Ready</p>
+    <div class="app">
+        <h1>Fragment1</h1>
+        <div>
+            <p>Fragment1</p>
+        </div>
     </div>
-</div>
 </body>
 </html>
