--- a/assets/www/fragment1.html
+++ b/assets/www/fragment1.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+    <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">-->
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <title>Hello World</title>
+    <script>
+        function copyText()
+        {
+        document.getElementById("field2").value=document.getElementById("field1").value;
+        }
+    </script>
 </head>
 <body>
-    <div class="app">
-        <h1>Fragment1</h1>
-        <div>
-            <p>Fragment1</p>
-        </div>
-    </div>
+        Field1: <input type="text" id="field1" value="Hello World!"><br>
+        Field2: <input type="text" id="field2"><br><br>
+        <button onclick="copyText()">copy text,this is ordinary javascript event</button>
 </body>
 </html>
