--- a/assets/www/fragment2.html
+++ b/assets/www/fragment2.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-tap-highlight" content="no">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Hello World</title>
 </head>
 <body>
-<div class="app">
-    <h1>Fragment2</h1>
-    <div>
-        <p>Fragment2</p>
+    <div class="app">
+        <h1>Fragment2</h1>
+        <div>
+            <button id="myBtn">toast</button>
+        </div>
+        <div>this click event is cordova</div>
     </div>
-</div>
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript">
+        document.getElementById("myBtn").addEventListener("click", toast);
+        function toast() {
+            navigator.bridgePlugin.toastMethod(null, null, "toast");
+        }
+    </script>
 </body>
 </html>
